--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
     "cSpell.words": [
         "ASPNETCORE",
+        "ingrediente",
         "Navega",
         "ningun",
+        "picsa",
+        "postgre",
         "proporcionado",
         "servicio",
         "testear",
